<resources>
    <string name="app_name">Food Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="email_address">Email Address</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_fullname">Type your full name</string>
    <string name="btn_continue">Continue</string>
    <string name="phone_no">Phone No.</string>
    <string name="type_your_phone_number">Type yout phone number</string>
    <string name="address">Address</string>
    <string name="type_your_address">Type your address</string>
    <string name="house_no">House No.</string>
    <string name="type_your_house_number">Type your house number</string>
    <string name="btn_signup_now">Sign Up Now</string>
    <string name="city">City</string>
    <string name="type_your_city">Type your city</string>
    <string name="yeay_completed">Yeay! Completed</string>
    <string name="success_desc">Now you are able to order\n some foods as a self-reward</string>
    <string name="find_foods">Find Foods</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Order</string>
    <string name="title_notifications">Profile</string>
</resources>